Fix potential flexbox conflict
The header links were in a <li>, nested in a <ul> itself nested
in a <nav>. The issue with the code is that ul was given flex,
but not its container nav. Without this commit, there would be
unexpected behavior when shrinking, resulting in a broken layout
in smaller viewports.8

--- a/style.css
+++ b/style.css
@@ -15,18 +15,15 @@ body {
     align-items: baseline;
 }
 
-nav {
-    margin-left: auto;
-}
-
-nav ul {
+ul {
     display: flex;
     gap: 18px;
     list-style: none;
+    margin-left: auto;
 
 }
 
-nav a {
+ul a {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB;
